# Misc-Notes

./: misc.md
elixir-notes/: MicroTeX-master  rustler-nix-build-log.md  rustler-nix-guide.md
elixir-notes/rustler-nix-example/: deps.nix  flake.nix  mix.exs  result
elixir-notes/rustler-nix-example/lib/: my_rustler.ex  my_rustler_macro.ex
elixir-notes/rustler-nix-example/lib/my_app/: application.ex
elixir-notes/rustler-nix-example/native/mycrate/: Cargo.toml
elixir-notes/rustler-nix-example/native/mycrate/src/: lib.rs
fitness-notes/: README.md
nix-notes/: README.md
